--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,46 @@ body {
     background-color: #111214;
 }
 
-p {
+p, li {
     font-family: "Lato", sans-serif;
     margin-top: 5px;
     margin-bottom: 5px;
     color: white;
 }
+
+strong {
+    background-color: #b20201;
+    font-size: .8em;
+    font-family: 'Coluna Rounded', sans-serif;
+}
+h1 {
+    color: white;
+    font-family: 'Coluna Rounded', sans-serif;
+    font-size: 10em;
+}
+
+hr{
+    width: 15%;
+    color: white;
+    margin: 1px;
+}
+
+#conteneur-image {
+    background-size: 100%;
+    height: 400px;
+     background-image: url('src/pizza-image.jpg');
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
+ 
+ hr{
+     width: 15%;
+     color: white;
+     margin: 1px;
+ }
+ 
+
 
 #container_history{
     display: flex;
@@ -154,6 +188,30 @@ p {
   background-image: url("src/Bogota.jpg");
   
 }
+
+#container_extra{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+}
+
+#container_extra div{
+    width: calc(33.3% - 100px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#container_extra ul{
+    color: white;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;  
+}
+
 
 footer {
     background-color: #b20201;
