--- a/styles.css
+++ b/styles.css
@@ -121,10 +121,6 @@ hr {
   width: 600px;
 }
 
-/*.history_text h2, p{
-    width: 600px;
-}*/
-
 #container_history div img {
   width: 400px;
   height: 500px;
@@ -138,9 +134,28 @@ hr {
   align-items: center;
 }
 
+.title_menu{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.title_menu h2{
+  color: white;
+  font-size: 5em;
+  margin: 15px 20px 0 20px
+}
+
+.title_menu hr{
+  width: 15%;
+  color: white;
+  margin: 1px;
+}
+
 .flex-container {
   display: flex;
-  width: 80%;
+  width: 1100px;
   flex-wrap: wrap;
   justify-content: space-around;
 }
@@ -270,6 +285,7 @@ footer {
   flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
+  padding: 20px 0;
 }
 
 #logofooter {
@@ -435,6 +451,10 @@ footer {
     transform: rotate(-45deg);
   }
 
+  .topnav li{
+    font-family: 'Coluna Rounded', sans-serif;
+  }
+
   h1{
     font-size: 5em;
   }
@@ -466,6 +486,7 @@ footer {
   .flex-container {
     flex-direction: column;
     align-items: center;
+    width: 80%;
   }
 
   #mapForm{
