--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ hr{
 #container_history {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   padding: 100px 0;
 }
 
@@ -295,7 +296,6 @@ hr{
 
 #mapForm {
   display: flex;
-  flex-wrap: wrap;
   width: 100%;
   justify-content: space-around;
   margin: 25px 0;
@@ -354,7 +354,7 @@ footer {
 }
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1000px) {
 
   /* hide classic menu */
   #topnav_menu {
@@ -537,7 +537,6 @@ footer {
 
   .main-container {
     flex-direction: column;
-
   }
 
   .flex-container {
@@ -559,10 +558,10 @@ footer {
     margin: 25px 0;
   }
 
-
-
   #mapForm{
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   #contactForm {
