--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ strong {
 .title_white h2{
   color: white;
   font-size: 5em;
-  margin: 15px 20px 0 20px
+  margin: 15px 20px 0 20px;
 }
 
 hr{
@@ -143,6 +143,7 @@ hr{
 #container_history div img {
   width: 400px;
   height: 500px;
+  border-radius: 10px;
 }
 
 
@@ -194,16 +195,67 @@ hr{
   visibility: visible;
 }
 
+.legende  {
+	position: relative;
+}
+.legende:before {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 2;
+	display: block;
+	content: '';
+	width: 0;
+	height: 0;
+	background: rgba(255,255,255,.2);
+	border-radius: 100%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	opacity: 0;
+}
+.legende:hover::before {
+	-webkit-animation: circle 2s;
+	animation: circle 1s;
+}
+@-webkit-keyframes circle {
+	0% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 1;
+	}
+	100% {
+		width: 150%;
+		height: 150%;
+		opacity: 0;
+	}
+}
+@keyframes circle {
+	0% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 1;
+	}
+	100% {
+		width: 150%;
+		height: 150%;
+		opacity: 0;
+	}
+}
+
 .ingredients {
   font-size: 1em;
   font-family: "Lato", sans-serif;
   justify-content: center;
+  font-weight: bold;
 }
 
 .listeingredients {
   font-size: 1.2em;
   font-family: "Lato", sans-serif;
   padding-left: 10px;
+  text-align: center;
 }
 
 /* Carte Pizzas*/
@@ -242,11 +294,13 @@ hr{
   width: 100%;
   justify-content: space-around;
   margin: 25px 0;
+  
 }
 
 iframe {
   width: 600px;
   height: 400px;
+  border-radius: 10px;
 }
 
 #contactForm {
@@ -497,11 +551,13 @@ footer {
     width: 310px;
     margin: 25px 0;
     padding: 0;
+    
   }
 
   iframe {
     width: 350px;
     height: 300px;
+    
   }
 
   footer div {
