--- a/styles.css
+++ b/styles.css
@@ -6,39 +6,42 @@
 
 :root {
   --color-primary: #b20201;
+  --color-second: #111214;
+  --font-primary : 'Coluna Rounded', sans-serif;
+  --font-second: "Lato", sans-serif
 }
 
 body {
-  background-color: #111214;
+  background-color: var(--color-second);
 }
 
 h1 {
   color: white;
-  font-family: 'Coluna Rounded', sans-serif;
+  font-family: var(--font-primary);
   font-size: 10em;
 }
 
 h2 {
-  font-family: 'Coluna Rounded', sans-serif;
+  font-family: var(--font-primary);
   margin: 40px 0;
   color: var(--color-primary);
   font-size: 2em
 }
 
 h3 {
-  font-family: 'Coluna Rounded', sans-serif;
+  font-family: var(--font-primary);
   color: var(--color-primary);
 }
 
 h4 {
-  font-family: 'Coluna Rounded', sans-serif;
+  font-family: var(--font-primary);
   color: var(--color-primary);
   font-size: 2.5em;
 }
 
 p,
 li {
-  font-family: "Lato", sans-serif;
+  font-family: var(--font-second);
   margin-top: 5px;
   margin-bottom: 5px;
   color: white;
@@ -47,7 +50,7 @@ li {
 strong {
     background-color: var(--color-primary);
     font-size: .8em;
-    font-family: 'Coluna Rounded', sans-serif;
+    font-family: var(--font-primary);
     position: relative;
     top: -13px;
     padding-top: 8px;
@@ -71,14 +74,15 @@ hr{
   align-items: center;
   width: 100%;
   justify-content: space-between;
-  font-family: 'Coluna Rounded', sans-serif;
+  font-family: var(--font-primary);
   font-size: 25px;
   z-index: 999;
 }
 
 #topnav_menu {
   margin-right: 80px;
-
+  display: flex;
+  align-self: flex-end;
 }
 
 .topnav_link {
@@ -88,7 +92,25 @@ hr{
 }
 
 .topnav_link:hover {
-  color: #111214;
+  color: var(--color-second);
+}
+
+.topnav_link::after{
+  content: "";
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 50px;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 600ms ease;
+    margin: 5px 0 5px 0;
+}
+
+.topnav_link:hover::after{
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 /* hide responsive menu */
@@ -268,14 +290,14 @@ hr{
 
 .ingredients {
   font-size: 1em;
-  font-family: "Lato", sans-serif;
+  font-family: var(--font-second);
   justify-content: center;
   font-weight: bold;
 }
 
 .listeingredients {
   font-size: 1.2em;
-  font-family: "Lato", sans-serif;
+  font-family: var(--font-second);
   padding-left: 10px;
   text-align: center;
 }
@@ -289,15 +311,17 @@ hr{
 /* Roulette */
 
 #selection-aleatoire {
-  background-color: #b20202;
+  background-color: var(--color-primary);
   padding: 10px 25px 10px 25px;
   border-radius: 10px;
   margin: 50px 0;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   }
   
   #professeur-pizza {
-    font-family: 'Coluna Rounded', sans-serif;
+    font-family: var(--font-primary);
     font-size: 50px;
   }
 
@@ -306,12 +330,21 @@ hr{
   }
   
   #button-professeur {
-    font-family: 'Coluna Rounded', sans-serif;
-    height: 30px;
-    font-size: 25px;
-    margin-top: 50 px;
+    font-family: var(--font-second);
+    font-size: 1.2em;
+    padding: 15px;
+    margin-top: 50px;
     margin-right: 14px;
-  
+    background-color: var(--color-second);
+    border: 2px solid var(--color-second);
+    border-radius: 50px;
+    color: white;
+  }
+
+  #button-professeur:hover{
+    background-color: white;
+    transition: all 200ms linear;
+    color: black;
   }
   
   #image-selection {
@@ -329,6 +362,8 @@ hr{
   #conteneur-prenom {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding-left: 30px;
   }
   
   #prenom {
@@ -336,7 +371,7 @@ hr{
       width: 270px;
       margin-bottom: 64px;
       text-align: center;
-      font-family: 'Coluna Rounded', sans-serif;
+      font-family: var(--font-primary);
     font-size: 50px;
       color: white;
   }
@@ -369,6 +404,7 @@ hr{
   display: flex;
   width: 100%;
   justify-content: space-around;
+  align-items: center;
   margin: 25px 0;
   
 }
@@ -382,13 +418,15 @@ iframe {
 #contactForm {
   display: flex;
   flex-direction: column;
-  font-family: "Lato", sans-serif;
+  font-family: var(--font-second);
   width: 500px;
   padding-left: 20px;
 }
 
 input {
-  font-family: "Lato", sans-serif;
+  font-family: var(--font-second);
+  padding: 10px;
+  border-radius: 10px;
   margin: 5px 0;
 }
 
@@ -398,16 +436,26 @@ label {
 }
 
 #button {
-  width: 80px;
-  color: black;
-  font-family: "Lato", sans-serif;
-  margin: 10px 0;
+  width: 200px;
+  font-family: var(--font-second);
+  border-radius: 50px;
+  margin: 15px 0;
   align-self: center;
+  border: solid 2px var(--color-primary);
+  background-color: var(--color-second);
+  color: white;
+}
+
+#button:hover{
+  background-color: var(--color-primary);
+  transition: all 200ms linear;
 }
 
 textarea {
-  height: 50px;
-  font-family: "Lato", sans-serif;
+  height: 100px;
+  font-family: var(--font-second);
+  padding: 10px;
+  border-radius: 10px;
   margin: 5px 0;
 }
 
@@ -465,7 +513,7 @@ footer {
 
     text-align: center;
 
-    background: #b20202;
+    background: var(--color-primary);
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
   }
@@ -549,7 +597,7 @@ footer {
 
   /* change color when opening the menu */
   #topnav_hamburger_icon.open span {
-    background: #111214;
+    background: var(--color-second);
   }
 
   /* the first span rotates 45° \ */
@@ -577,7 +625,7 @@ footer {
   }
 
   .topnav li{
-    font-family: 'Coluna Rounded', sans-serif;
+    font-family: var(--font-primary);
   }
 
   h1{
@@ -624,7 +672,7 @@ footer {
   .unfolding{
     display: block;
     transform: rotate(90deg);
-    transition: all 600ms ease-in;
+    transition: all 300ms linear;
     height: 25px;
     width: 25px;
     margin-left: 20px;
@@ -632,7 +680,7 @@ footer {
 
   .unfolding-open{
     transform: rotate(-90deg);
-    transition: all 600ms ease-in;
+    transition: all 300ms linear;
   }
 
   .unfolding svg{
@@ -645,7 +693,11 @@ footer {
     overflow: hidden;
     height: 2100px;
     transition: height 600ms ease-in;
-  }               
+  }    
+  
+  #selection-aleatoire{
+    padding: 0;
+  }
 
   #professeur-pizza{
     text-align: center;
