--- a/styles.css
+++ b/styles.css
@@ -785,19 +785,19 @@ footer div {
 }
 
 #myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  left: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: #b20201; /* Set a background color */
-  color: #111214; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 50%; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  display: none; 
+  position: fixed; 
+  bottom: 20px; 
+  left: 30px; 
+  z-index: 99; 
+  border: none; 
+  outline: none; 
+  background-color: #b20201; 
+  color: #111214; 
+  cursor: pointer; 
+  padding: 15px;
+  border-radius: 50%; 
+  font-size: 18px; 
   fill: white;
 }
 
