--- a/styles.css
+++ b/styles.css
@@ -788,17 +788,19 @@ footer div {
   display: none; 
   position: fixed; 
   bottom: 20px; 
-  left: 30px; 
+  right: 30px; 
   z-index: 99; 
   border: none; 
   outline: none; 
-  background-color: #b20201; 
-  color: #111214; 
+  background-color: var(--color-primary); 
+  color: var(--color-second); 
   cursor: pointer; 
   padding: 15px;
-  border-radius: 50%; 
-  font-size: 18px; 
+  border-radius: 50%;   
   fill: white;
+  box-shadow: 0px 0px 4.2px black;
+  height: 60px;
+  width: 60px;
 }
 
 #myBtn svg {
